<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exercise_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/default_margin"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <Button
            android:id="@+id/btnRemoveExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/workout_detail_remove_exercise" />

        <TextView
            android:id="@+id/tvExerciseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            tools:text="Exercise name" />

        <TextView
            android:id="@+id/tvMuscleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="Arms" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/etRep"
                android:text="@string/workout_detail_et_rep_text" />

            <EditText
                android:id="@+id/etRep0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="0"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/etWeight"
                android:text="@string/workout_detail_et_weight_text" />

            <EditText
                android:id="@+id/etWeight0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="0"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/btnExerciseClear0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_light"
                android:src="@android:drawable/ic_delete"
                android:tint="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/etRep"
                android:text="@string/workout_detail_et_rep_text" />

            <EditText
                android:id="@+id/etRep1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="0"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/etWeight"
                android:text="@string/workout_detail_et_weight_text" />

            <EditText
                android:id="@+id/etWeight1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="0"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/btnExerciseClear1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_light"
                android:src="@android:drawable/ic_delete"
                android:tint="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/etRep"
                android:text="@string/workout_detail_et_rep_text" />

            <EditText
                android:id="@+id/etRep2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="0"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/etWeight"
                android:text="@string/workout_detail_et_weight_text" />

            <EditText
                android:id="@+id/etWeight2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="0"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/btnExerciseClear2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_light"
                android:src="@android:drawable/ic_delete"
                android:tint="@android:color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/btnExerciseSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/workout_detail_save_exercise"
            android:tint="@android:color/black" />

    </LinearLayout>
</androidx.cardview.widget.CardView>